[package]
name = "ssmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
serde = {version = "1.0.152", features = ["derive", "rc"]}
serde_json = "1.0.94"
sha256 = "1.1.2"
rustube = {version = "0.6.0", features = ["blocking"]}
id3 = "1.6.0"
image = "0.24.5"
reqwest = {version = "0.11.14", features = ["blocking"]}
base64 = "0.21.0"
tokio = {version = "1.26.0", features = ["rt-multi-thread"]}
itertools = "0.10.5"
youtube_dl = {version = "0.8.0", features = ["tokio"]}
futures = "0.3.27"
mp3-duration = "0.1.10"

[dev-dependencies]
serial_test = "1.0.0"
